# autoguard-ml

./: .gitignore  LICENSE  README.md  USER.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
autoguard/: __init__.py
autoguard/api/: __init__.py  server.py
autoguard/automl/: __init__.py  engine.py  registry.py
autoguard/cli/: __init__.py  main.py
autoguard/core/: __init__.py  config.py  exceptions.py  guard.py  logging.py
autoguard/data/: __init__.py  cleaner.py  doctor.py
autoguard/drift/: __init__.py  detector.py
autoguard/explain/: __init__.py  shap_explainer.py
autoguard/utils/: __init__.py  report.py
examples/: config_example.yaml  generate_sample_data.py  quickstart.py
tests/integration/: test_pipeline.py
tests/unit/: test_cleaner.py  test_config.py  test_doctor.py  test_drift.py
